find_package(OpenCV REQUIRED)
message(STATUS "OpenCV library status:")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
message(STATUS "    static include: ${OpenCV_STATIC_INCLUDE_DIR}")
include_directories(${OpenCV_INCLUDE_DIRS})

# find_package(Freetype REQUIRED)
# message(STATUS "Freetype library status")
# message(STATUS "    ${FREETYPE_INCLUDE_DIRS}")
# message(STATUS "    ${FREETYPE_INCLUDE_DIR_ft2build}")
# message(STATUS "    ${FREETYPE_LIBRARIES}")
# include_directories(${FREETYPE_INCLUDE_DIRS})

find_package(jsoncpp REQUIRED)

aux_source_directory(. SRC_LIST)
add_executable(main ${SRC_LIST})
# add_executable(main main.cpp)

target_link_libraries(main PRIVATE ${OpenCV_LIBS}) 
target_link_libraries(main PRIVATE JsonCpp::JsonCpp)
# target_link_libraries(main ${FREETYPE_LIBRARIES})
target_link_libraries(main PRIVATE rknn_api pthread avcodec avformat avutil swscale)